# ScanpyAutoAnalyzer

./: .gitignore  README.md  ShortUsageExample.ipynb  pyproject.toml  requirements.txt  setup.py
lib/: ExampleAnalysis.ipynb
scripts/: ScanpyAnalysis.py  VelocytoAnalalysis.py
src/ScanpyAutoAnalyzer/: IO.py  ScanpyAnalysis.py  ScanpyAutoAnalyzer.py  __init__.py  data.py  functions.py  slurm.py
src/ScanpyAutoAnalyzer/data/: ExampleAnalysis.md  ImputeExpression.md  Impute_using_dca.md  LungCellTypesAnalysis.md  Map_CellTypes.md  MultiClusterMerge.md  PrepareOnNode.md  ScVI_integration.md  SingleR.md  VelocytoAnalalysis.md  multi_cluster_merge.md  req.py
test/: none.ipynb
tests/: h5ad.ipynb  h5ad.md  runner.py  test_loom.py  test_slurm.py
tests/data/: testScript.sh
tests/data/H5/: 500_PBMC_3p_LT_Chromium_Controller_filtered_feature_bc_matrix.h5
